# alkyd

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  build.rs
.github/workflows/: cd.yml  ci.yml  publish.yml
.github/workflows/scripts/: run_coverage.sh
assets/: StandardCubeMap.png~  galaxyfog.wgsl  irridescant.wgsl  noise.wgsl  painterly_material.wgsl  spritely.wgsl  texture_test.wgsl  utils.wgsl
assets/example_assets/: candle_flame.wgsl  galaxyfog.wgsl  grass.glb  irridescant.wgsl  painterly_material.wgsl  spritely.wgsl  test_terrain.glb  texture_test.wgsl  water.wgsl
assets/example_assets/warrior/: depth_sheet.png.kra  full_sheet.png.kra  full_sheet.png~  normal_sheet.png.kra  normal_sheet_t.png.kra  occlusion.png.kra  uv_canvas.png.kra  uv_canvas.png~  uv_sheet.png.kra  uv_sheet.png~  volume.png.kra
assets/fluids/: consts.wgsl  sph_fluid.wgsl  sph_second.wgsl
assets/noise/: noise.wgsl  slot_a.wgsl  slot_b.wgsl  slot_c.wgsl  slot_d.wgsl
assets/shader_utils/: general.wgsl  noise_gen.wgsl  simplex_3d.wgsl  simplex_4d.wgsl  sprite_rotation.wgsl  tex_gen.wgsl
assets/shader_utils/color_functions/: blend_modes.wgsl
assets/shader_utils/consts/: globs.wgsl
assets/shader_utils/filters/: simple.wgsl  sobel.wgsl
assets/shader_utils/noise/: noise_compute.wgsl  noise_gen.wgsl  tex_gen.wgsl
assets/shaders/: grass.wgsl  terrain.wgsl
assets/shaders/noise/: slot_a.wgsl  slot_b.wgsl  slot_c.wgsl  slot_d.wgsl
assets/shaders/surfaces/: concrete.wgsl  terrazo.wgsl
assets/sprite/: normal_sheet.png~
benches/: my_bench.rs
examples/candle_flame/: main.rs
examples/candle_flame/candle_flame/: candle_flame.rs  mod.rs  systems.rs
examples/candle_flame/galaxyfog/: galaxy.rs  mod.rs  systems.rs
examples/compute/: image.wgsl  main.rs
examples/cube/: main.rs  systems.rs
examples/example_mats/: mod.rs
examples/example_mats/irridescant/: mod.rs  shader.rs
examples/example_mats/painterly/: mod.rs  resources.rs
examples/fluid/: main.rs
examples/galaxy-cube/: main.rs
examples/grass/: main.rs  systems.rs
examples/patterns/: main.rs
examples/sprite/: main.rs
examples/sprite/spritely/: components.rs  mod.rs  shader.rs  systems.rs
examples/stone/: main.rs
examples/surfaces/: main.rs  systems.rs
examples/surfaces/irridescant/: mod.rs  shader.rs
examples/terrain/: main.rs  systems.rs
examples/test/: main.rs
src/: lib.rs  prefix_sum.rs
src/compute/: mod.rs  pipeline_cache.rs  plugin.rs  prepare.rs  resources.rs  systems.rs  traits.rs  worker.rs  worker_builder.rs
src/editor/: components.rs  mod.rs  resources.rs  systems.rs
src/embedded/: mod.rs
src/fluid/: components.rs  mod.rs  node.rs  resource.rs  systems.rs
src/grass/: components.rs  config.rs  lod.rs  material.rs  mod.rs  pipeline.rs  resources.rs  systems.rs
src/grass/render/: compute.rs  draw.rs  instance.rs  mod.rs  node.rs  pipeline.rs  prepare.rs  queue.rs
src/materials/: components.rs  mod.rs  painterly.rs  painterly_material.wgsl  resources.rs
src/materials/example_mats/galaxyfog/: mod.rs
src/materials/galaxyfog/: galaxy.rs  mod.rs  systems.rs
src/materials/irridescant/: mod.rs  shader.rs
src/materials/painterly/: components.rs  mod.rs  painterly.rs  resources.rs  systems.rs
src/materials/spritely/: components.rs  mod.rs  shader.rs  systems.rs
src/noise/: components.rs  mod.rs  noise_gen.wgsl  resources.rs  systems.rs
src/pattern_wfc/: mod.rs  shader.rs
src/patterns/: mod.rs  shader.rs
src/raymarch_quad/: mod.rs
src/terrain/: components.rs  mod.rs  node.rs
src/tex_gen/: mod.rs  systems.rs
src/utilities/: mod.rs  stepper.rs  systems.rs
src/workers/: mod.rs  resources.rs  systems.rs
src/workers/texture_slots/: mod.rs  texture_a.rs  texture_b.rs  texture_c.rs  texture_d.rs
