[package]
name = "alkyd"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["**/bin", "examples/*", "**/wgpu_trace"]
description = "bevy crate for handling procedural textures and shaders"
publish = true

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_pbr",
    "png",
] }
# rand = { version = "0.8", optional = true }
# rand_pcg = { version = "0.3", optional = true }
# serde = { version = "1.0", features = ["derive"] }
# anyhow = { version = "1.0", optional = true }
# ron = { version = "0.7", optional = true }
# bytemuck = { version = "1.2.0-alpha.1", optional = true }
cfg-if = "1.0.0"
# bevy_panorbit_camera = { version = "0.19.1" }
crevice = { version = "0.16.0", optional = true }
# sickle_ui = { version = "0.2.1", optional = true }
bitflags = "2.5.0"
bevy_easy_compute = { version = "0.15.0", features = ["webgl"] }

[dev-dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "trace",
    "png",
] }

cargo-husky = { version = "1", features = [
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
] }

[features]
# editor = [
#     "dep:sickle_ui",
#     "dep:rand_pcg",
#     "dep:rand",
#     "dep:bytemuck",
#     "compute",
# ]
compute = ["dep:crevice"]
debug = []
default = []

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
features = ["x11", "wayland"]
version = "0.15.0"

[lib]
name = "alkyd"
path = "src/lib.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = 0
strip = true
lto = "thin"
codegen-units = 10


[[example]]
name = "cube"
doc-scrape-examples = true

[[example]]
name = "stone"
doc-scrape-examples = true


[[example]]
name = "sprite"
doc-scrape-examples = true
